11712406-project1/test/test_11712406_3.out
Error type A at Line 1: unknown lexeme 123abc_2
Error type B at Line 3: Specifier error
Error type A at Line 4: unknown lexeme 1a
Error type A at Line 5: unknown lexeme $
Error type B at Line 5: Missing semicolon ';'
Error type B at Line 7: Missing semicolon ';'
