11712406-project1/test/test_11712406_3.spl
float 123abc_2;
int fun() {
    int 123 == a;
    while(1a - 3) {
        a = a * $
    }
    return 1
}